Updates
- Added LongQueryFieldParameter
- Added functions to Point to convert to/from GeoPt
- Fixed SearchableModelDataReader/Builder to properly extend OwnedDatabaseModelDataReader/Builder
- Other minor changes